k8s/pie-chart-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pie-chart-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: app
    ports:
        - port: 3000
          targetPort: 3000
