k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - http:
              paths:
                  - path: /
                    backend:
                        serviceName: pie-chart-cluster-ip-service
                        servicePort: 3000
